fixed spacing of adding class button

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -204,7 +204,7 @@
 
 #addclass{
   float: right;
-  padding: 1%;
+  padding: 1.25%;
 }
 
 #addclassdropdown{
